[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/interactable/water/bolhadeagua-sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy/pig_cannon/cannon_ball.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="cannon_ball" type="Area2D"]
position = Vector2( 0, 8 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )
damage = 1
speed = 5

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
hframes = 3

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -7.5 )
scale = Vector2( 0.6, 0.65 )

[connection signal="body_entered" from="." to="." method="_on_cannon_ball_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
